    &#8226; Opening notifications will now take you to the correct place<br/>
    &#8226; Auto-complete of users. Opening their profile will now make them searchable<br/>
    &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
    &#8226; Ability to open retweeters profile when viewing a retweet<br/>
    &#8226; Displaying links on timeline<br/>
    &#8226; Displaying and sharing Twitter picture links<br/>
    &#8226; Hashtag muting support, works on mentions now too<br/>
    &#8226; Retweets from Talon Pull in interactions drawer, they now stack on top of each other instead of creating an instance for every new one.<br/>
    &#8226; Theme selection<br/>
    &#8226; A bit larger auto-complete box<br/>
<br/>
<b>FIXES:</b><br/>
    &#8226; Images won't get mixed up between people or tweets anymore<br/>
    &#8226; Images will be full screen when the load on the tweet viewer if you had problems with that<br/>
    &#8226; Action bar not always being set to overlay, so it created a jumpy behavior and big margin at the top<br/>
    &#8226; A little bit better Vine support. Sound is an issue though.<br/>
    &#8226; Excessive lag when closing the tweet viewer or profiles on lower end devices (caused from the background processes not being stopped)<br/>
    &#8226; TONS of Tweetmarker fixes (I think it should be working very well now... at least through my testing!)<br/>
    &#8226; Talon Pull sometimes shutting down the connection with the server<br/>
    &#8226; Pebble notifications will now work for everyone<br/>
    &#8226; Fixed the compose window not always shutting<br/>
</br><br/>

<b>Version 1.4.4:</b><br/><br/>
    &#8226; Pwiccer support (https://play.google.com/store/apps/details?id=com.t3hh4xx0r.pwiccer&hl=en)<br/>
    &#8226; Mention retweeter when replying<br/>
    &#8226; Fixes for live streaming sometimes setting up multiple listeners causing duplicates<br/>
    &#8226; Open play store links to the play store<br/>