@@ -24,6 +24,7 @@
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:adjustViewBounds="true"
         android:padding="20dp" />
 
     <LinearLayout
